--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,17 @@ before_install:
 
 script: 
   - docker run b.c.giri31/docker-react npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstack
+  region: "us-east-2"
+  app: "react"
+  env : "React-env"
+  bucket_name: "elasticbeanstalk-us-east-2-379093691113"
+  bucket_path: "react"
+  on:
+    branch: master
+    access_key_id: $AWS_ACCESSKEY
+    secret_access_key:
+      secure: "$AWS_SECRET"
+
