--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,13 @@ services:
   - docker
 
 before_install:
-  - docker build -t b.c.giri31/docker-react -f Dockerfile.dev .
+  - docker build -t test -f Dockerfile.dev .
 
 script: 
-  - docker run b.c.giri31/docker-react npm run test -- --coverage
+  - docker run test npm run test -- --coverage
 
 deploy:
-  provider: "elasticbeanstalk"
+  provider: elasticbeanstalk
   region: "us-east-2"
   app: "react"
   env : "React-env"
@@ -17,7 +17,7 @@ deploy:
   bucket_path: "react"
   on:
     branch: master
-    access_key_id: $AWS_ACCESSKEY
-    secret_access_key:
-      secure: "$AWS_SECRET"
+  access_key_id: $AWS_ACCESSKEY
+  secret_access_key:
+      secure: $AWS_SECRET
 
