--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
 
 script: 
   - docker run test npm run test -- --coverage
-
+language: generic
 deploy:
   provider: elasticbeanstalk
   region: "us-east-2"
