--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
 
 script: 
   - docker run test npm run test -- --coverage
-  
+
 language: generic
 deploy:
   provider: elasticbeanstalk
@@ -20,5 +20,5 @@ deploy:
     branch: master
   access_key_id: $AWS_ACCESSKEY
   secret_access_key:
-      secure: $AWS_SECRET
+      secure: "$AWS_SECRET"
 
