--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t test -f Dockerfile .
+  - docker build -t test -f Dockerfile.dev .
 
 script: 
   - docker run test npm run test -- --coverage
