--- a/.travis.yml
+++ b/.travis.yml
@@ -11,14 +11,14 @@ script:
 language: generic
 deploy:
   provider: elasticbeanstalk
-  region: "us-east-2"
+  region: "ap-south-1"
   app: "react"
   env : "React-env"
-  bucket_name: "elasticbeanstalk-us-east-2-379093691113"
+  bucket_name: "elasticbeanstalk-ap-south-1-379093691113"
   bucket_path: "react"
   on:
     branch: master
-  access_key_id: $AWS_ACCESSKEY
+  access_key_id: $AWS_ACCESS_KEY
   secret_access_key:
-      secure: "$AWS_SECRET"
+      secure: "$AWS_SECRET_KEY"
 
