--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ services:
   - docker
 
 before_install:
-  - docker build -t test -f Dockerfile.dev .
+  - docker build -t test1 -f Dockerfile.dev .
 
 script: 
-  - docker run -e CI=true test npm test -- --coverage
+  - docker run -e CI=true test1 npm test -- --coverage
 
 deploy:
   provider: elasticbeanstalk
