--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t test1 -f Dockerfile.dev .
+  - docker build -t test1 -f Dockerfile .
 
 script: 
   - docker run -e CI=true test1 npm test -- --coverage
@@ -19,4 +19,6 @@ deploy:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key: $AWS_SECRET_KEY
+
+
 
