--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t test1  .
+  - docker build -t test1 -f Dockerfile.dev .
 
 script: 
   - docker run -e CI=true test1 npm test -- --coverage
