--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,10 @@ script:
 
 deploy:
   provider: elasticbeanstalk
-  region: "ap-south-1"
+  region: "us-east-1"
   app: "react1"
   env : "React1-env"
-  bucket_name: "elasticbeanstalk-ap-south-1-379093691113"
+  bucket_name: "elasticbeanstalk-us-east-1-379093691113"
   bucket_path: "react1"
   on:
     branch: master
